--- a/index.html
+++ b/index.html
@@ -7,8 +7,20 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
   <style>
+    body {
+      margin: 0;
+      padding-bottom: 120px; /* Space for fixed footer */
+    }
+    .container-fluid, .container {
+      opacity: 0; /* Start hidden for page load animation */
+      animation: fadeIn 1s ease-in forwards;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
     .cover-photo {
-      height: 300px;
+      height: 200px; /* Reduced height */
       margin: 6px;
       background: url('asset/files/cover.jpg') no-repeat center center/cover;
     }
@@ -19,6 +31,29 @@
       object-fit: cover;
       border: 3px solid white;
       margin-top: -75px;
+    }
+    .profile-section h2, .profile-section p, .social-icons {
+      opacity: 0; /* Start hidden for text animation */
+      transform: translateY(20px); /* Start slightly below */
+      animation: slideUp 0.8s ease-out forwards;
+    }
+    .profile-section h2 { animation-delay: 0.2s; }
+    .profile-section .text-muted { animation-delay: 0.4s; }
+    .profile-section p.lead:nth-child(3) { animation-delay: 0.6s; }
+    .profile-section p.lead:nth-child(4) { animation-delay: 0.8s; }
+    .profile-section p.lead:nth-child(5) { animation-delay: 1s; }
+    .profile-section p.lead:nth-child(6) { animation-delay: 1.2s; }
+    .profile-section p.lead:nth-child(7) { animation-delay: 1.4s; }
+    .social-icons { animation-delay: 1.6s; }
+    @keyframes slideUp {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
     .social-icons a {
       font-size: 1.5rem;
@@ -31,7 +66,6 @@
     }
     .gallery-img {
       width: 100%;
-      height: 200px;
       object-fit: cover;
       border-radius: 8px;
       transition: transform 0.3s ease, opacity 0.5s ease;
@@ -52,8 +86,11 @@
     }
     .footer {
       background-color: #f8f9fa;
-      padding: 2rem 0;
-      margin-top: 2rem;
+      padding: 1.5rem 0;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      z-index: 1000;
     }
     .footer a {
       color: #333;
@@ -64,7 +101,7 @@
     }
     @media (max-width: 576px) {
       .cover-photo {
-        height: 200px;
+        height: 150px; /* Further reduced for mobile */
       }
       .profile-pic {
         width: 100px;
@@ -76,7 +113,36 @@
         margin: 0 5px;
       }
       .gallery-img {
-        height: 150px;
+        margin-bottom: 1rem;
+      }
+      body {
+        padding-bottom: 140px; /* Adjusted for footer on mobile */
+      }
+      .footer {
+        padding: 1rem 0;
+      }
+      .footer h4 {
+        font-size: 1.1rem;
+      }
+      .footer p {
+        font-size: 0.85rem;
+      }
+      .col-12.col-md-3 {
+        width: 50%; /* Two columns on mobile */
+      }
+    }
+    @media (max-width: 400px) {
+      .col-12.col-md-3 {
+        width: 100%; /* Single column for very small screens */
+      }
+      .footer {
+        padding: 0.8rem 0;
+      }
+      .footer h4 {
+        font-size: 1rem;
+      }
+      .footer p {
+        font-size: 0.8rem;
       }
     }
   </style>
@@ -87,7 +153,7 @@
     <div class="cover-photo"></div>
 
     <!-- Profile Section -->
-    <div class="container text-center">
+    <div class="container text-center profile-section">
       <img src="asset/files/profile.jpg" class="profile-pic" alt="Profile Picture" />
       <h2 class="mt-3">Munmun Hazra</h2>
       <p class="text-muted">Creative Professional | Makeup Artist | Designer</p>
@@ -105,7 +171,7 @@
     </div>
 
     <!-- Work Tabs -->
-    <div class="container mt-5">
+    <div class="container-fluid mt-4 mb-3">
       <ul class="nav nav-tabs" id="workTabs" role="tablist">
         <li class="nav-item" role="presentation">
           <button class="nav-link active" id="kolka-tab" data-bs-toggle="tab" data-bs-target="#kolka" type="button" role="tab">Kolka</button>
@@ -121,116 +187,34 @@
       <div class="tab-content" id="workTabsContent">
         <!-- Kolka Tab -->
         <div class="tab-pane fade show active" id="kolka" role="tabpanel">
-          <div class="row mt-4">
-            <div class="col-12 col-md-3 mb-4">
-              <img src="asset/files/kolka/k1.jpg" class="gallery-img" alt="Kolka Design">
-            </div>
-            <div class="col-12 col-md-3 mb-4">
-              <img src="asset/files/kolka/k2.jpg" class="gallery-img" alt="Kolka Design">
-            </div>
-            <div class="col-12 col-md-3 mb-4">
-              <img src="asset/files/kolka/k3.jpg" class="gallery-img" alt="Kolka Design">
-            </div>
-            <div class="col-12 col-md-3 mb-4">
-              <img src="asset/files/kolka/k4.jpg" class="gallery-img" alt="Kolka Design">
-            </div>
-          </div>
-          <div class="row mt-4">
-            <div class="col-12 col-md-3 mb-4">
-              <img src="asset/files/kolka/k5.jpg" class="gallery-img" alt="Kolka Design">
-            </div>
-            <div class="col-12 col-md-3 mb-4">
-              <img src="asset/files/kolka/k6.jpg" class="gallery-img" alt="Kolka Design">
-            </div>
-            <div class="col-12 col-md-3 mb-4">
-              <img src="asset/files/kolka/k7.jpg" class="gallery-img" alt="Kolka Design">
-            </div>
-            <div class="col-12 col-md-3 mb-4">
-              <img src="asset/files/kolka/k8.jpg" class="gallery-img" alt="Kolka Design">
-            </div>
-          </div>
+          <div class="row mt-3" id="kolka-gallery"></div>
         </div>
 
         <!-- Mehendi Tab -->
         <div class="tab-pane fade" id="mehendi" role="tabpanel">
-          <div class="row mt-4">
-            <div class="col-12 col-md-3 mb-4">
-              <img src="asset/files/mahendi/mh1.jpg" class="gallery-img" alt="Mehendi Design">
-            </div>
-            <div class="col-12 col-md-3 mb-4">
-              <img src="asset/files/mahendi/mh2.jpg" class="gallery-img" alt="Mehendi Design">
-            </div>
-            <div class="col-12 col-md-3 mb-4">
-              <img src="asset/files/mahendi/mh3.jpg" class="gallery-img" alt="Mehendi Design">
-            </div>
-            <div class="col-12 col-md-3 mb-4">
-              <img src="asset/files/mahendi/mh4.jpg" class="gallery-img" alt="Mehendi Design">
-            </div>
-          </div>
-          <div class="row mt-4">
-            <div class="col-12 col-md-3 mb-4">
-              <img src="asset/files/mahendi/mh5.jpg" class="gallery-img" alt="Mehendi Design">
-            </div>
-            <div class="col-12 col-md-3 mb-4">
-              <img src="asset/files/mahendi/mh6.jpg" class="gallery-img" alt="Mehendi Design">
-            </div>
-            <div class="col-12 col-md-3 mb-4">
-              <img src="asset/files/mahendi/mh7.jpg" class="gallery-img" alt="Mehendi Design">
-            </div>
-            <div class="col-12 col-md-3 mb-4">
-              <img src="asset/files/mahendi/mh8.jpg" class="gallery-img" alt="Mehendi Design">
-            </div>
-          </div>
+          <div class="row mt-3" id="mehendi-gallery"></div>
         </div>
 
         <!-- Makeover Tab -->
         <div class="tab-pane fade" id="makeover" role="tabpanel">
-          <div class="row mt-4">
-            <div class="col-12 col-md-3 mb-4">
-              <img src="asset/files/mackup/mo1.jpg" class="gallery-img" alt="Makeover">
-            </div>
-            <div class="col-12 col-md-3 mb-4">
-              <img src="asset/files/mackup/mo2.jpg" class="gallery-img" alt="Makeover">
-            </div>
-            <div class="col-12 col-md-3 mb-4">
-              <img src="asset/files/mackup/mo3.jpg" class="gallery-img" alt="Makeover">
-            </div>
-            <div class="col-12 col-md-3 mb-4">
-              <img src="asset/files/mackup/mo4.jpg" class="gallery-img" alt="Makeover">
-            </div>
-          </div>
-          <div class="row mt-4">
-            <div class="col-12 col-md-3 mb-4">
-              <img src="asset/files/mackup/mo5.jpg" class="gallery-img" alt="Makeover">
-            </div>
-            <div class="col-12 col-md-3 mb-4">
-              <img src="asset/files/mackup/mo6.jpg" class="gallery-img" alt="Makeover">
-            </div>
-            <div class="col-12 col-md-3 mb-4">
-              <img src="asset/files/mackup/mo7.jpg" class="gallery-img" alt="Makeover">
-            </div>
-            <div class="col-12 col-md-3 mb-4">
-              <img src="asset/files/mackup/mo8.jpg" class="gallery-img" alt="Makeover">
-            </div>
-          </div>
+          <div class="row mt-3" id="makeover-gallery"></div>
         </div>
       </div>
     </div>
-
-    <!-- Footer -->
-    <footer class="footer text-center">
-      <div class="container">
-        <h4>Contact Me</h4>
-        <p>Email: <a href="mailto:munmunhazra@example.com">munmunhazra@example.com</a></p>
-        <p>Phone: <a href="tel:+1234567890">+123-456-7890</a></p>
-        <div class="social-icons my-3">
-          <a href="https://www.facebook.com/share/1AvuDM1UpV/" target="_blank"><i class="bi bi-facebook"></i></a>
-          <a href="https://www.instagram.com/munmun_hazra5?igsh=YzljYTk1ODg3Zg==" target="_blank"><i class="bi bi-instagram"></i></a>
-        </div>
-        <p>&copy; 2025 Munmun Hazra. All rights reserved.</p>
-      </div>
-    </footer>
   </div>
+
+  <!-- Footer -->
+  <footer class="footer text-center">
+    <div class="container">
+      <h4>Contact Me</h4>
+      <p>Email: <a href="mailto:munmunhazra@example.com">munmun.makeover.rm@gmail.com</a></p>
+      <div class="social-icons my-3">
+        <a href="https://www.facebook.com/share/1AvuDM1UpV/" target="_blank"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/munmun_hazra5?igsh=YzljYTk1ODg3Zg==" target="_blank"><i class="bi bi-instagram"></i></a>
+      </div>
+      <p>© 2025 Munmun Hazra. All rights reserved.</p>
+    </div>
+  </footer>
 
   <!-- Image Popup Modal -->
   <div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
@@ -250,18 +234,88 @@
   <!-- Bootstrap JS and Custom JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    // Animation for gallery images
-    document.addEventListener('DOMContentLoaded', () => {
-      const images = document.querySelectorAll('.gallery-img');
-      images.forEach((img, index) => {
-        setTimeout(() => {
-          img.classList.add('animate');
-          img.style.transform = `translateY(${index * 10}px)`;
-        }, index * 100);
+    // Image arrays for each tab
+    const galleryImages = {
+      kolka: [
+        'asset/files/kolka/k1.jpg',
+        'asset/files/kolka/k2.jpg',
+        'asset/files/kolka/k3.jpg',
+        'asset/files/kolka/k4.jpg',
+        'asset/files/kolka/k5.jpg',
+        'asset/files/kolka/k6.jpg',
+        'asset/files/kolka/k7.jpg',
+        'asset/files/kolka/k8.jpg',
+        'asset/files/kolka/k9.jpg',
+        'asset/files/kolka/k10.jpg',
+        'asset/files/kolka/k11.jpg',
+        'asset/files/kolka/k12.jpg',
+        'asset/files/kolka/k13.jpg',
+        'asset/files/kolka/k14.jpg',
+        'asset/files/kolka/k15.jpg',
+        'asset/files/kolka/k16.jpg',
+        'asset/files/kolka/k17.jpg',
+        'asset/files/kolka/k18.jpg',
+        'asset/files/kolka/k19.jpg',
+        'asset/files/kolka/k20.jpg',
+        'asset/files/kolka/k21.jpg',
+      ],
+      mehendi: [
+        'asset/files/mahendi/mh1.jpg',
+        'asset/files/mahendi/mh2.jpg',
+        'asset/files/mahendi/mh3.jpg',
+        'asset/files/mahendi/mh4.jpg',
+        'asset/files/mahendi/mh5.jpg',
+        'asset/files/mahendi/mh6.jpg',
+      ],
+      makeover: [
+        'asset/files/mackup/mo1.jpg',
+        'asset/files/mackup/mo2.jpg',
+        'asset/files/mackup/mo3.jpg',
+        'asset/files/mackup/mo4.jpg',
+        'asset/files/mackup/mo5.jpg',
+        'asset/files/mackup/mo6.jpg',
+      ]
+    };
+
+    // Function to populate gallery
+    function populateGallery(tabId, images) {
+      const gallery = document.getElementById(`${tabId}-gallery`);
+      gallery.innerHTML = ''; // Clear existing content
+      images.forEach((src, index) => {
+        const col = document.createElement('div');
+        col.className = 'col-12 col-md-3 mb-3';
+        const img = document.createElement('img');
+        img.src = src;
+        img.className = 'gallery-img';
+        img.alt = `${tabId.charAt(0).toUpperCase() + tabId.slice(1)} Design`;
+        col.appendChild(img);
+        gallery.appendChild(col);
       });
+    }
+
+    // Populate galleries on page load
+    document.addEventListener('DOMContentLoaded', () => {
+      populateGallery('kolka', galleryImages.kolka);
+      populateGallery('mehendi', galleryImages.mehendi);
+      populateGallery('makeover', galleryImages.makeover);
+
+      // Animation for gallery images
+      const animateImages = (pane) => {
+        const images = pane.querySelectorAll('.gallery-img');
+        images.forEach((img, index) => {
+          img.classList.remove('animate');
+          setTimeout(() => {
+            img.classList.add('animate');
+            img.style.transform = `translateY(${index * 10}px)`;
+          }, index * 100);
+        });
+      };
+
+      // Animate images in active tab (kolka) on load
+      animateImages(document.getElementById('kolka'));
 
       // Image click to open modal
-      images.forEach(img => {
+      document.querySelectorAll('.gallery-img').forEach(img => {
         img.addEventListener('click', () => {
           const modalImg = document.getElementById('modalImage');
           modalImg.src = img.src;
@@ -275,14 +329,7 @@
       tabs.forEach(tab => {
         tab.addEventListener('shown.bs.tab', (e) => {
           const targetPane = document.querySelector(e.target.dataset.bsTarget);
-          const paneImages = targetPane.querySelectorAll('.gallery-img');
-          paneImages.forEach((img, index) => {
-            img.classList.remove('animate');
-            setTimeout(() => {
-              img.classList.add('animate');
-              img.style.transform = `translateY(${index * 10}px)`;
-            }, index * 100);
-          });
+          animateImages(targetPane);
         });
       });
     });
